really fix safari card clipping this time

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -129,7 +129,7 @@
 
       .stacking {
         height: 30px;
-        overflow-y: clip;
+        overflow-y: hidden;
       }
     }
   }
